--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,48 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
 }
-
-.App-link {
-  color: rgb(112, 76, 182);
+.card {
+  width: 90vw;
+  max-width: 500px;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
+.steps {
+  opacity: 0.5;
+  margin-bottom: 10px;
+}
+
+.title {
+  color: blue;
+}
+
+.building, .wall {
+  text-align:start;
+}
+
+li a {
+  color: green;
+  text-decoration: underline;
+}
+
+body button {
+  margin: 5px;
+  border-radius: 10%;
+  padding: 5px;
+}
+
+.floorInput {
+  text-align: center;
+  border-color: lightblue;
+  width: 150px;
+}
+
+.sizeInput{
+  width: 150px;
+  margin: 5px;
+  text-align: center;
 }
